# goodmed

./: .gitattributes  .gitignore  CHROMIUM_PATCHES.md  DATABASE.md  LICENSE  MACOS_BUILD.md  MACOS_SETUP.md  README.md  action_runner.py  bisect_flags.py  chrome_importer.py  commit_message.txt  competitor_urls.txt  config.py  cookie_warmer.py  dashboard_server.py  db.py  device_templates.py  diagnose.py  fingerprints.js  ghost_shell_browser.py  ghost_shell_config.cc  install_deps.bat  log_banners.py  main.py  nk_browser.py  platform_paths.py  process_reaper.py  profile_enricher.py  profile_manager.py  profile_validator.py  proxy_diagnostics.py  proxy_forwarder.py  pyproject.toml  pytest.ini  requirements.txt  rotating_proxy.py  scheduler.py  serp_behavior.py  session_manager.py  (+5 more)
dashboard/: index.html
ghost_shell/: __init__.py  __main__.py  config.py  main.py
installer/: .gitignore  README.md  build.bat
scratch/: deep_icon_sync.py
scripts/: __init__.py  apply_chromium_icon.py  backup_sources.ps1  bisect_flags.py  build-ghost-shell.bat  build-ghost-shell.sh  creepjs_check.py  deploy-ghost-shell-flat.bat  deploy-ghost-shell-flat.sh  deploy-ghost-shell.bat  diagnose.py  download_chromium.bat  download_chromium.ps1  package_chromium.bat  package_chromium.ps1  smart-search-and-click.json
tests/: __init__.py  conftest.py  test_chromedriver.py  test_db_profile_cascade.py  test_ja3_check.py  test_process_reaper.py  test_proxy_live.py  test_proxy_rotation.py
wiki/: Architecture.md  Bulk-Create.md  Cookie-Pool.md  Critical-Lessons.md  Extensions.md  FAQ.md  Flow-Steps-Reference.md  Profiles-and-Fingerprints.md  Quick-Start.md  Troubleshooting.md  _README.md
с++/: ghost_shell_config.cc  (+3 more)
(+113 files in other folders)
